2011-01-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/sighand.c: Replaced use of includes.h
	by respective direct includes.
	(let_em_die): We assume we have always waitpid() available
	and don't try to fall back to wait4() or wait3().
	(openvas_signal): Assume we always have sa_restorer.
	(sighandler, sighand_segv): Always use _exit() and don't try
	to fall back to exit(). Replace call of _EXIT() by exit().

	* openvassd/shared_socket.c: Replaced use of includes.h
	by respective direct includes.

2011-01-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/plugs_req.c: Replaced use of includes.h
	by respective direct includes.

	* openvassd/piic.c: Replaced use of includes.h
	by respective direct includes.

	* openvassd/processes.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit() and _EXIT() by _exit().

	* openvassd/attack.c: Replaced use of includes.h
	by respective direct includes. Replaced occurences of EXIT()
	by exit().

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/oval_plugins.c: Replaced use of includes.h
	by respective direct includes.
	(oval_plugin_launch): Replaced ntthread_t by int as it
	was handled as int already anyway.

	* openvassd/nes_plugins.c: Replaced use of includes.h
	by respective direct includes.

	* openvassd/nasl_plugins.c: Replaced use of includes.h
	by respective direct includes.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/save_kb.c (diff_scan, diff_scan_enable): Removed
	as these functions are never used and differntial computation
	do not belong to the Scanner anyway.

	* openvassd/save_kb.h: Removed protos accordingly.

2011-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvassd/pluginlaunch.c: Replaced use of includes.h
	by respective direct includes.

	* openvassd/pluginload.c: Replaced use of includes.h
	by respective direct includes.
